--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,22 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "sourceType": "module"
-    },
-    "rules": {
-        "indent": ["warn", "tab"],
-        "quotes": ["error", "single"],
-        "no-unused-vars": "warn",
-        "no-undef": "warn",
-        "semi": ["error", "always"],
-        "no-console": "warn"
-    },
-    "globals": {
-        "angular": true,
-        "agGrid": true
-    }
+	"env": {
+		"browser": true,
+		"commonjs": true,
+		"es6": true
+	},
+	"extends": "eslint:recommended",
+	"parserOptions": {
+		"sourceType": "module"
+	},
+	"rules": {
+		"indent": ["warn", "tab"],
+		"quotes": ["error", "single"],
+		"no-unused-vars": "warn",
+		"no-undef": "warn",
+		"semi": ["error", "always"],
+		"no-console": ["error", { "allow": ["warn", "error", "log"] }]
+	},
+	"globals": {
+		"process": true
+	}
 }
