feat(api): Tests, constants and calcs

--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -1,8 +1,8 @@
 {
 	"env": {
-		"browser": true,
 		"commonjs": true,
-		"es6": true
+		"es6": true,
+		"jest/globals": true
 	},
 	"extends": "eslint:recommended",
 	"parserOptions": {
@@ -18,5 +18,6 @@
 	},
 	"globals": {
 		"process": true
-	}
+	},
+	"plugins": ["jest"]
 }
