--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
     "singleQuote": true,
     "useTabs": true,
-    "printWidth": 105,
+    "printWidth": 120,
     "tabWidth": 2,
-    "cssEnable": ["scss"],
+    "cssEnable": ["css"],
     "eslintIntegration": true
 }
