--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -17,7 +17,8 @@
 		"no-console": ["error", { "allow": ["warn", "error", "log"] }]
 	},
 	"globals": {
-		"process": true
+		"process": true,
+		"console": true
 	},
 	"plugins": ["jest"]
 }
