--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
 	},
 	"devDependencies": {
 		"eslint": "5.12.1",
+		"eslint-plugin-jest": "22.2.2",
 		"jest": "24.0.0",
 		"mockingoose": "2.12.0",
 		"nodemon": "1.18.9",
