feat(setup): Setup environment

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_ENDPOINT=http://localhost:3000
+REACT_APP_API_ENDPOINT=http://0.0.0.0:3000
 REACT_APP_NAME=Telzir
 REACT_APP_ENV=development
 PORT=3001
