--- a/infra/nginx/services/client/web.conf
+++ b/infra/nginx/services/client/web.conf
@@ -19,17 +19,17 @@ server {
     # Handle static files
 	root  /var/www/public;
 
-	location /css/ {
+	location /static/css/ {
 		access_log off;
 		expires 1d;
 	}
 
-	location /img/ {
+	location /static/img/ {
 		access_log off;
 		expires 1d;
 	}
 
-	location /js/ {
+	location /static/js/ {
 		access_log off;
 		expires 1d;
 	}
