--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
 	],
 	"dependencies": {
 		"body-parser": "1.18.3",
+		"cors": "2.8.5",
 		"express": "4.16.4",
 		"module-alias": "2.1.0",
 		"mongoose": "5.4.7"
