--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-plugin-jest": "22.2.2"
+    "eslint-plugin-jest": "22.2.2",
+    "jest-dom": "3.0.1",
+    "react-testing-library": "5.4.4"
   }
 }
