--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "setup",
-  "version": "0.1.0",
-  "description": "Project setup",
-  "main": "./scripts/setup.js",
-  "scripts": {
-    "test": "node ./scripts/test.js",
-    "setup": "node ./scripts/setup.js",
-    "build:dev": "node ./scripts/dev.js",
-    "build:prod": "node ./scripts/prod.js",
-    "build:down": "node ./scripts/down.js",
-    "postinstall": "node ./scripts/setup.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nogsantos/telzir.git"
-  },
-  "keywords": [
-    "setup"
-  ],
-  "author": "Fabricio Nogueira",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nogsantos/telzir/issues"
-  },
-  "homepage": "https://github.com/nogsantos/telzir#readme",
-  "devDependencies": {
-    "colors": "^1.3.3",
-    "node-emoji": "^1.8.1",
-    "shelljs": "^0.8.3"
-  }
+	"name": "setup",
+	"version": "0.1.0",
+	"description": "Project setup",
+	"main": "./scripts/setup.js",
+	"scripts": {
+		"setup": "node ./scripts/setup.js",
+		"test": "./node_modules/.bin/npm-run-all --parallel build:test:*",
+		"build:test:api": "node ./scripts/api_test.js",
+		"build:test:client": "node ./scripts/client_test.js",
+		"build:dev": "node ./scripts/dev.js",
+		"build:prod": "node ./scripts/prod.js",
+		"build:down": "node ./scripts/down.js",
+		"postinstall": "node ./scripts/setup.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/nogsantos/telzir.git"
+	},
+	"keywords": [
+		"setup"
+	],
+	"author": "Fabricio Nogueira",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/nogsantos/telzir/issues"
+	},
+	"homepage": "https://github.com/nogsantos/telzir#readme",
+	"devDependencies": {
+		"colors": "^1.3.3",
+		"node-emoji": "^1.8.1",
+		"npm-run-all": "4.1.5",
+		"shelljs": "^0.8.3"
+	}
 }
