--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
+		"watch": "react-scripts test --watch",
 		"eject": "react-scripts eject"
 	},
 	"keywords": [
