--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"body-parser": "1.18.3",
 		"cors": "2.8.5",
+		"dotenv": "^8.2.0",
 		"express": "4.16.4",
 		"module-alias": "2.1.0",
 		"mongoose": "5.8.0"
@@ -29,9 +30,9 @@
 	"devDependencies": {
 		"eslint": "5.12.1",
 		"eslint-plugin-jest": "22.2.2",
-		"jest": "24.0.0",
+		"jest": "^26.1.0",
 		"mockingoose": "2.12.0",
-		"nodemon": "1.18.9",
+		"nodemon": "^2.0.4",
 		"npm-run-all": "4.1.5"
 	},
 	"repository": {
