--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,11 @@
 	"private": true,
 	"dependencies": {
 		"axios": "0.19.0",
-		"node-sass": "4.11.0",
+		"node-sass": "^4.14.1",
 		"prop-types": "15.6.2",
 		"react": "^16.7.0",
 		"react-dom": "^16.7.0",
-		"react-scripts": "2.1.3",
+		"react-scripts": "^3.4.1",
 		"styled-components": "4.1.3",
 		"styled-media-query": "2.1.1"
 	},
